# Mousecontrolapp

./: README.md  gradle.properties  gradlew  proguard-rules.pro  settings.gradle
.github/workflows/: build.yml  build.yml.bak
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h  utils.cpp  utils.h
app/src/main/java/com/mouselock/app/: MainActivity.java  MouseService.java  ShizukuHelper.java
app/src/main/res/drawable/: glass_background.xml  glow_border.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  normal_border.xml
app/src/main/res/layout/: activity_main.xml  overlay_layout.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
